samples/_failures_safe/1761077599_fd6d6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ff16119.c: In function ‘print_token’:
./samples/SAFE/__tmp_6ff16119.c:155:13: error: expected declaration or statement at end of input
  155 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_6ff16119.c:155:13: error: expected declaration or statement at end of input
